--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "callerApp",
+  "name": "client",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -11,9 +11,7 @@
   },
   "dependencies": {
     "react": "17.0.2",
-    "react-native": "0.65.1",
-    "react-native-background-timer": "^2.4.1",
-    "react-native-immediate-phone-call": "^2.0.0",
+    "react-native": "0.65.1",    
     "socket.io-client": "^4.2.0"
   },
   "devDependencies": {
